BLIN Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4
BLIN Gain: $ 0.15 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_RV
BLIN Gain: $ 0.15 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_IR2
BLIN Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_TR
BLIN Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_AV
BLIN Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_VI
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_AL
BLIN Gain: $ 0.39 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_LI
BLIN Gain: $ 0.37 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_QP
BLIN Gain: $ -2.28 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_HM
BLIN Gain: $ 1.29 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_SS
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_QL
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_DB8
BLIN Gain: $ 0.19 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_TR_IR2
BLIN Gain: $ 0.19 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_TR_QP
BLIN Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_QP_IR2
BLIN Gain: $ 1.29 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_RV_TR
BLIN Gain: $ -1.68 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_RV_TR_DB2
BLIN Gain: $ 1.06 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_RV_AV
BLIN Gain: $ -0.4 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_RV_AL
BLIN Gain: $ -0.19 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_RV_QP
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_HM_TR
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_HM_AV
BLIN Gain: $ -0.19 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB4_CS4_HM_QP
BLIN Gain: $ 0.19 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV
BLIN Gain: $ -0.89 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_IR2
BLIN Gain: $ 1.81 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR
BLIN Gain: $ 0.88 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_AV
BLIN Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_VI
BLIN Gain: $ -0.19 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_AL
BLIN Gain: $ 0.88 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_LI
BLIN Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QP
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM
BLIN Gain: $ 0.39 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_SS
BLIN Gain: $ 0.37 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QL
BLIN Gain: $ 0.39 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_DB8
BLIN Gain: $ 2.28 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR_IR2
BLIN Gain: $ 0.39 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR_QP
BLIN Gain: $ 0.37 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QP_IR2
BLIN Gain: $ -0.16 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_TR
BLIN Gain: $ 1.29 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_TR_DB2
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_AV
BLIN Gain: $ 0.64 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_AL
BLIN Gain: $ 0.49 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_QP
BLIN Gain: $ -0.16 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_TR
BLIN Gain: $ 1.09 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_AV
BLIN Gain: $ 0.21 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_QP
BLIN Gain: $ 0.39 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV
BLIN Gain: $ 2.28 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_IR2
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_TR
BLIN Gain: $ 0.39 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_AV
BLIN Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_VI
BLIN Gain: $ -1.1 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_AL
BLIN Gain: $ -1.1 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_LI
BLIN Gain: $ 0.39 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_QP
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_HM
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_SS
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_QL
BLIN Gain: $ 0.41 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_DB8
BLIN Gain: $ 0.41 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_TR_IR2
BLIN Gain: $ 0.64 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_TR_QP
BLIN Gain: $ 1.09 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_QP_IR2
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV_TR
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV_TR_DB2
BLIN Gain: $ -2.57 Win %: 0 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV_AV
BLIN Gain: $ 0.41 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV_AL
BLIN Gain: $ 0.64 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV_QP
BLIN Gain: $ 0.49 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_HM_TR
BLIN Gain: $ 0.66 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_HM_AV
BLIN Gain: $ 0.41 Win %: 100.00 in 1 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_HM_QP
BLIN Gain: $ 0.41 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_RV
BLIN Gain: $ 0.39 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_IR2
BLIN Gain: $ 0.39 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_TR
BLIN Gain: $ -0.48 Win %: 0 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_AV
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_VI
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_AL
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_LI
BLIN Gain: $ 0.21 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_QP
BLIN Gain: $ 1.81 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_HM
BLIN Gain: $ 0.41 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_SS
BLIN Gain: $ 1.81 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_QL
BLIN Gain: $ 0.41 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_DB8
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_TR_IR2
BLIN Gain: $ 0.21 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_TR_QP
BLIN Gain: $ 1.28 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_QP_IR2
BLIN Gain: $ 2.44 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_RV_TR
BLIN Gain: $ -0.4 Win %: 0 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_RV_TR_DB2
BLIN Gain: $ 1.09 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_RV_AV
BLIN Gain: $ 0.64 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_RV_AL
BLIN Gain: $ 0.64 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_RV_QP
BLIN Gain: $ -2.57 Win %: 0 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_HM_TR
BLIN Gain: $ 1.46 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_HM_AV
BLIN Gain: $ 1.28 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_HM_QP
BLIN Gain: $ 1.28 Win %: 100.00 in 1 days with algo TB4_HL_HS_QM_OB5_OS5_CB1_CS1_HM_QP
BLIN Gain: $ 0.77 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5
BLIN Gain: $ -3.61 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV
BLIN Gain: $ -4.72 Win %: 50.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_IR2
BLIN Gain: $ 0.77 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR
BLIN Gain: $ 0.77 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_AV
BLIN Gain: $ -3.21 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_VI
BLIN Gain: $ 0.77 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_AL
BLIN Gain: $ -0.73 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_LI
BLIN Gain: $ -3.33 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QP
BLIN Gain: $ -0.75 Win %: 75.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM
BLIN Gain: $ -3.31 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_SS
BLIN Gain: $ 0.77 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QL
BLIN Gain: $ 0.06 Win %: 75.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_DB8
BLIN Gain: $ -4.72 Win %: 50.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR_IR2
BLIN Gain: $ -3.4 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP
BLIN Gain: $ -1.8 Win %: 50.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QP_IR2
BLIN Gain: $ -4.96 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR
BLIN Gain: $ -4.96 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB2
BLIN Gain: $ -3.42 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV
BLIN Gain: $ 1.54 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL
BLIN Gain: $ -1.16 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP
BLIN Gain: $ 0.89 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR
BLIN Gain: $ 0.89 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV
BLIN Gain: $ -3.09 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
BLIN Gain: $ 1.29 Win %: 100.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV
BLIN Gain: $ -2.19 Win %: 50.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_IR2
BLIN Gain: $ -2.19 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR
BLIN Gain: $ -1.41 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_AV
BLIN Gain: $ -1.98 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_VI
BLIN Gain: $ -1.17 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_AL
BLIN Gain: $ -1.21 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_LI
BLIN Gain: $ -0.26 Win %: 75.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QP
BLIN Gain: $ 0.44 Win %: 75.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM
BLIN Gain: $ -0.88 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_SS
BLIN Gain: $ -1.71 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QL
BLIN Gain: $ -0.79 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_DB8
BLIN Gain: $ -0.79 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR_IR2
BLIN Gain: $ -5.48 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR_QP
BLIN Gain: $ -0.53 Win %: 50.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QP_IR2
BLIN Gain: $ -0.52 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_TR
BLIN Gain: $ -0.52 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_TR_DB2
BLIN Gain: $ -0.66 Win %: 25.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_AV
BLIN Gain: $ 0.49 Win %: 100.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_AL
BLIN Gain: $ 0.42 Win %: 75.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_QP
BLIN Gain: $ 0.51 Win %: 75.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_TR
BLIN Gain: $ 0.21 Win %: 75.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_AV
BLIN Gain: $ -0.24 Win %: 75.00 in 4 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_QP
BLIN Gain: $ 1.07 Win %: 100.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV
BLIN Gain: $ 0.47 Win %: 100.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_IR3
BLIN Gain: $ -4.42 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR
BLIN Gain: $ -3.29 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_AV
BLIN Gain: $ -2.25 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_VI
BLIN Gain: $ -2.09 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_AL
BLIN Gain: $ -1.93 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_LI
BLIN Gain: $ -0.05 Win %: 75.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QP
BLIN Gain: $ 1.07 Win %: 100.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM
BLIN Gain: $ 1.07 Win %: 100.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_SS
BLIN Gain: $ 1.07 Win %: 100.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QL
BLIN Gain: $ 1.07 Win %: 100.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_DB10
BLIN Gain: $ -4.68 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR_IR3
BLIN Gain: $ -2.37 Win %: 50.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR_QP
BLIN Gain: $ -0.04 Win %: 50.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QP_IR3
BLIN Gain: $ -4.34 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_TR
BLIN Gain: $ -4.34 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_TR_DB3
BLIN Gain: $ -3.49 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_AV
BLIN Gain: $ -2.29 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_AL
BLIN Gain: $ -1.19 Win %: 50.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_QP
BLIN Gain: $ -4.42 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_TR
BLIN Gain: $ -3.29 Win %: 25.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_AV
BLIN Gain: $ -1.29 Win %: 50.00 in 4 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_QP
BLIN Gain: $ -3.61 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV
BLIN Gain: $ -4.72 Win %: 50.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_IR2
BLIN Gain: $ 0.77 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_TR
BLIN Gain: $ 0.77 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_AV
BLIN Gain: $ -3.21 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_VI
BLIN Gain: $ 0.77 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_AL
BLIN Gain: $ -0.73 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_LI
BLIN Gain: $ -3.33 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_QP
BLIN Gain: $ 0.89 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM
BLIN Gain: $ -3.31 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_SS
BLIN Gain: $ 0.77 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_QL
BLIN Gain: $ 0.77 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_DB8
BLIN Gain: $ -4.72 Win %: 50.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_TR_IR2
BLIN Gain: $ -3.4 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP
BLIN Gain: $ 0.01 Win %: 50.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_QP_IR2
BLIN Gain: $ -4.96 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR
BLIN Gain: $ -4.96 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR_DB2
BLIN Gain: $ -3.42 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV
BLIN Gain: $ 1.54 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL
BLIN Gain: $ -1.16 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP
BLIN Gain: $ 0.89 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR
BLIN Gain: $ 0.89 Win %: 100.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV
BLIN Gain: $ -3.09 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP
BLIN Gain: $ -3.09 Win %: 25.00 in 4 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP
BLIN Gain: $ -5.23 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1
BLIN Gain: $ -5.11 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV
BLIN Gain: $ -6.57 Win %: 33.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_IR1
BLIN Gain: $ -7.19 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_TR
BLIN Gain: $ -7.09 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_AV
BLIN Gain: $ -3.65 Win %: 0 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_VI
BLIN Gain: $ 0.2 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_AL
BLIN Gain: $ 3.13 Win %: 100.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_LI
BLIN Gain: $ -36.53 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_QP
BLIN Gain: $ -5.29 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_HM
BLIN Gain: $ -0.15 Win %: 50.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_SS
BLIN Gain: $ -1.31 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_QL
BLIN Gain: $ -5.3 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_DB6
BLIN Gain: $ -4.29 Win %: 33.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_TR_IR1
BLIN Gain: $ -21.51 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_TR_QP
BLIN Gain: $ -9.03 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_QP_IR1
BLIN Gain: $ -5.92 Win %: 33.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV_TR
BLIN Gain: $ -5.73 Win %: 33.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV_TR_DB1
BLIN Gain: $ -0.56 Win %: 33.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV_AV
BLIN Gain: $ -1.06 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV_AL
BLIN Gain: $ -42.89 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV_QP
BLIN Gain: $ -7.38 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_HM_TR
BLIN Gain: $ -5.97 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_HM_AV
BLIN Gain: $ -35.84 Win %: 33.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_HM_QP
BLIN Gain: $ 0.52 Win %: 83.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV
BLIN Gain: $ -9.08 Win %: 0 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_IR2
BLIN Gain: $ -3.76 Win %: 16.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR
BLIN Gain: $ -3.99 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_AV
BLIN Gain: $ -6.88 Win %: 0 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_VI
BLIN Gain: $ -3.75 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_AL
BLIN Gain: $ -4.86 Win %: 0 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_LI
BLIN Gain: $ 0.14 Win %: 66.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QP
BLIN Gain: $ -4.55 Win %: 50.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM
BLIN Gain: $ -3.46 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_SS
BLIN Gain: $ -3.62 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QL
BLIN Gain: $ -3.37 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_DB8
BLIN Gain: $ -9.08 Win %: 0 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR_IR2
BLIN Gain: $ -1.75 Win %: 50.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR_QP
BLIN Gain: $ -0.87 Win %: 50.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QP_IR2
BLIN Gain: $ -1.29 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_TR
BLIN Gain: $ -1.29 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_TR_DB2
BLIN Gain: $ -1.43 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_AV
BLIN Gain: $ -0.28 Win %: 83.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_AL
BLIN Gain: $ 0.16 Win %: 50.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_QP
BLIN Gain: $ -2.07 Win %: 66.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_TR
BLIN Gain: $ -2.37 Win %: 66.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_AV
BLIN Gain: $ -0.5 Win %: 50.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_QP
BLIN Gain: $ 2.1 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV
BLIN Gain: $ -2.63 Win %: 66.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_IR3
BLIN Gain: $ -4.56 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR
BLIN Gain: $ -11.32 Win %: 0 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_AV
BLIN Gain: $ -6.1 Win %: 0 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_VI
BLIN Gain: $ -2.57 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_AL
BLIN Gain: $ -5.33 Win %: 16.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_LI
BLIN Gain: $ -8.82 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QP
BLIN Gain: $ 1.1 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM
BLIN Gain: $ 1.1 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_SS
BLIN Gain: $ 0.17 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QL
BLIN Gain: $ 1.1 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_DB10
BLIN Gain: $ -8.29 Win %: 16.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR_IR3
BLIN Gain: $ -9.74 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR_QP
BLIN Gain: $ -3.65 Win %: 16.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QP_IR3
BLIN Gain: $ -3.48 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_TR
BLIN Gain: $ -3.49 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_TR_DB3
BLIN Gain: $ -6.1 Win %: 0 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_AV
BLIN Gain: $ -1.66 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_AL
BLIN Gain: $ -0.48 Win %: 66.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_QP
BLIN Gain: $ -4.56 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_TR
BLIN Gain: $ -11.32 Win %: 0 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_AV
BLIN Gain: $ -8.82 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_QP
BLIN Gain: $ -3.86 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV
BLIN Gain: $ -7.98 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_IR2
BLIN Gain: $ -1.81 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR
BLIN Gain: $ -1.81 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_AV
BLIN Gain: $ -6.4 Win %: 0 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_VI
BLIN Gain: $ -5.43 Win %: 66.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_AL
BLIN Gain: $ -4.01 Win %: 0 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_LI
BLIN Gain: $ -3.99 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QP
BLIN Gain: $ -1.69 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM
BLIN Gain: $ -5.89 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_SS
BLIN Gain: $ -1.81 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QL
BLIN Gain: $ -1.81 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_DB8
BLIN Gain: $ -3.73 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR_IR2
BLIN Gain: $ -4.06 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP
BLIN Gain: $ -1.54 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QP_IR2
BLIN Gain: $ -5.73 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR
BLIN Gain: $ -5.73 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB2
BLIN Gain: $ -4.19 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV
BLIN Gain: $ 0.77 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL
BLIN Gain: $ -1.83 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP
BLIN Gain: $ -1.69 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR
BLIN Gain: $ -1.69 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV
BLIN Gain: $ -2.82 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
BLIN Gain: $ -2.82 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
BLIN Gain: $ -5.17 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1
BLIN Gain: $ -5.11 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV
BLIN Gain: $ -6.57 Win %: 33.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_IR1
BLIN Gain: $ -7.19 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_TR
BLIN Gain: $ -7.09 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_AV
BLIN Gain: $ -3.65 Win %: 0 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_VI
BLIN Gain: $ -1.3 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_AL
BLIN Gain: $ 3.13 Win %: 100.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_LI
BLIN Gain: $ -42.96 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_QP
BLIN Gain: $ -5.29 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_HM
BLIN Gain: $ -0.15 Win %: 50.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_SS
BLIN Gain: $ -1.31 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_QL
BLIN Gain: $ -5.17 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_DB6
BLIN Gain: $ -4.29 Win %: 33.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_TR_IR1
BLIN Gain: $ -21.51 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_TR_QP
BLIN Gain: $ -9.03 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_QP_IR1
BLIN Gain: $ -7.16 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV_TR
BLIN Gain: $ -7.16 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV_TR_DB1
BLIN Gain: $ -1.17 Win %: 33.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV_AV
BLIN Gain: $ 0.11 Win %: 66.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV_AL
BLIN Gain: $ -42.89 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_RV_QP
BLIN Gain: $ -7.38 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_HM_TR
BLIN Gain: $ 1.34 Win %: 50.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_HM_AV
BLIN Gain: $ -43.08 Win %: 16.00 in 6 days with algo TB5_LO_QM_OB2_OS2_CB1_CS1_HM_QP
BLIN Gain: $ 0.52 Win %: 83.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV
BLIN Gain: $ -9.08 Win %: 0 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_IR2
BLIN Gain: $ -3.37 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR
BLIN Gain: $ -3.99 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_AV
BLIN Gain: $ -5.17 Win %: 0 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_VI
BLIN Gain: $ -3.75 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_AL
BLIN Gain: $ -4.49 Win %: 0 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_LI
BLIN Gain: $ -0.52 Win %: 50.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QP
BLIN Gain: $ -2.07 Win %: 66.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM
BLIN Gain: $ -3.46 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_SS
BLIN Gain: $ -3.62 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QL
BLIN Gain: $ -3.57 Win %: 16.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_DB8
BLIN Gain: $ -9.08 Win %: 0 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR_IR2
BLIN Gain: $ -0.52 Win %: 50.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR_QP
BLIN Gain: $ -1.68 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QP_IR2
BLIN Gain: $ -1.29 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_TR
BLIN Gain: $ -1.29 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_TR_DB2
BLIN Gain: $ -1.43 Win %: 33.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_AV
BLIN Gain: $ -0.28 Win %: 83.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_AL
BLIN Gain: $ 0.16 Win %: 50.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_QP
BLIN Gain: $ -2.07 Win %: 66.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_TR
BLIN Gain: $ -2.37 Win %: 66.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_AV
BLIN Gain: $ -0.5 Win %: 50.00 in 6 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_QP
BLIN Gain: $ 2.1 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV
BLIN Gain: $ -2.63 Win %: 66.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_IR3
BLIN Gain: $ -4.56 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR
BLIN Gain: $ -10.84 Win %: 0 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_AV
BLIN Gain: $ -6.1 Win %: 0 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_VI
BLIN Gain: $ -2.57 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_AL
BLIN Gain: $ -5.33 Win %: 16.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_LI
BLIN Gain: $ -8.82 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QP
BLIN Gain: $ 1.1 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM
BLIN Gain: $ 1.1 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_SS
BLIN Gain: $ 0.17 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QL
BLIN Gain: $ 1.1 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_DB10
BLIN Gain: $ -8.29 Win %: 16.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR_IR3
BLIN Gain: $ -9.74 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR_QP
BLIN Gain: $ -3.65 Win %: 16.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QP_IR3
BLIN Gain: $ -3.48 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_TR
BLIN Gain: $ -3.48 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_TR_DB3
BLIN Gain: $ -6.1 Win %: 0 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_AV
BLIN Gain: $ -1.66 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_AL
BLIN Gain: $ 0.28 Win %: 83.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_QP
BLIN Gain: $ -4.56 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_TR
BLIN Gain: $ -11.32 Win %: 0 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_AV
BLIN Gain: $ -8.82 Win %: 33.00 in 6 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_QP
BLIN Gain: $ -4.38 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV
BLIN Gain: $ -3.73 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_IR2
BLIN Gain: $ -1.81 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR
BLIN Gain: $ -1.81 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_AV
BLIN Gain: $ -6.4 Win %: 0 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_VI
BLIN Gain: $ -1.81 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_AL
BLIN Gain: $ -4.01 Win %: 0 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_LI
BLIN Gain: $ -3.99 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QP
BLIN Gain: $ -1.69 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM
BLIN Gain: $ -5.89 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_SS
BLIN Gain: $ -1.81 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QL
BLIN Gain: $ -1.81 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_DB8
BLIN Gain: $ -3.73 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR_IR2
BLIN Gain: $ -4.06 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP
BLIN Gain: $ -1.54 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QP_IR2
BLIN Gain: $ -5.73 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR
BLIN Gain: $ -5.73 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB2
BLIN Gain: $ -4.19 Win %: 33.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV
BLIN Gain: $ 0.77 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL
BLIN Gain: $ -1.83 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP
BLIN Gain: $ -1.69 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR
BLIN Gain: $ -1.69 Win %: 83.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV
BLIN Gain: $ -3.75 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
BLIN Gain: $ -3.75 Win %: 16.00 in 6 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_IR3
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_VI
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_AL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_LI
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_SS
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_DB10
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR_IR3
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_TR_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_QP_IR3
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_TR_DB3
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_AL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_RV_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB3_HS_QM_OB3_OS3_CB4_CS4_HM_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_IR2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_VI
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_AL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_LI
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_SS
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_DB8
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR_IR2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_TR_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_QP_IR2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_TR_DB2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_AL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_RV_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB3_CS3_HM_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_IR2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_VI
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_AL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_LI
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_SS
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_DB8
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR_IR2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_QP_IR2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_IR2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_VI
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_AL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_LI
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_HM
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_SS
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_QL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_DB8
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_TR_IR2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_TR_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_QP_IR2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV_TR_DB2
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV_AL
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_RV_QP
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_HM_TR
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_HM_AV
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB5_OS5_CB2_CS2_HM_QP
